--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,4 +6,13 @@
     = javascript_include_tag 'application'
     = csrf_meta_tags
   %body
-    = yield
+    %hgroup
+      %header
+        %h1 A workout app...
+      %nav
+        = render 'layouts/public_nav'
+    .content
+      .notices
+        %p#notice= notice
+        %p#alert= alert
+      = yield
