--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,7 +1,7 @@
 %h2= I18n.t('user.title')
 .user
   = form_for @user, method: :post, url: users_path do |f|
-    = render 'form', { f: f, user: @user }
+    = render 'form', f: f, user: @user
     .field
       = f.label :password, I18n.t('user.fields.password')
       = f.text_field :password
