Dry up errors in views with a helper and add guard clauses for conditionals in command methods

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,9 +1,4 @@
-- if user.errors.any?
-  #error_explanation
-    %h2= "#{pluralize(user.errors.count, "error")} prohibited this user from being saved:"
-    %ul
-      - user.errors.full_messages.each do |msg|
-        %li= msg
+= display_any_errors_for(model: user, text: I18n.t('user.errors.intro'))
 
 .field
   = f.label :email, I18n.t('user.fields.email')
